static/standard.css
/**
 * standard.css
 */
 
/* outer scaffolding */
body {
	background-color: #a1b0c6;
	background-image: url(/static/images/body-background-bar.png);
	background-repeat: repeat-x;
}
.outer-wrapper {
	position: relative;
	width: 840px;
	margin: 0 auto;
	background-image: url(/static/images/wrapper-background-edges.png);
	background-repeat: repeat-y;
}
.inner-wrapper {
	min-height: 195px;
	background-image: url(/static/images/content-background.png);
	background-repeat: no-repeat;
	padding: 85px 40px 20px;
}

/* the logo link */
.title span {
	display: none;
}
.title a {
	position: absolute;
	top: 0;
	left: 20px;
	display: block;
	width: 250px;
	height: 85px;
}

/* rounded corners */
.top, .bottom, .left, .right. .middle {
	margin: 0;
}
.left, .right {
	background-image: url(/static/images/rounded-corners.png);
	height: 10px;
	overflow: hidden;
	padding: 0;
	margin: 0;
}
/* Not sure why this is here... FF works fine, and it break Safari */
/*.left {
  margin-right: 10px;
}*/
.right {
	float: right;
	width: 10px;
}
.top .left {
	background-position: -10px 0px;
}
.bottom .left {
	background-position: -10px -10px;
}
.bottom .right {
	background-position: 0px -10px;
}
.middle {
	background-color: white;
	padding: 0 10px;
	*padding: 10px;

  /* Well, it works. fixes Safari, looks ok in FF */
	border:1px solid white;
}
* html .top, * html .bottom {
	display: none; /* IE 6 */
}

/* form and info boxes */
.form, .info {
	margin-bottom: 20px;
}
.form .middle, .info .middle {
	min-height: 280px;
}
.form p, .info p {
	margin: 0;
}
.form {
	float: right;
	width: 300px;
}
.info {
	float: left;
	width: 440px;
}

/* form box elements */
.form fieldset {
	border: none;
	margin: 0;
	padding: 0;
}
.form .ideas {
	float: right;
	margin-top: -1.7em;
}
.form textarea {
	width: 265px;
	height: 100px;
	padding: 5px;
}
.form .text {
	width: 5em;
	padding: 1px;
}
.checkout {
	padding: 10px;
	text-align: center;
}
.checkout input {
	background-image: url(/static/images/checkout-button.png);
	border: none;
	width: 189px;
	height: 31px;
	color: white;
	font-size: 1.5em;
}

/* info box elements */
.info dl, .info dd {
	margin: 0;
}
.info dt {
	font-size: 1.2em;
}
.info ul {
	margin: 0;
	padding: 0;
}
.info li {
	list-style-type: none;
	background-image: url(/static/images/sprites.png);
	*background-image: url(/static/images/sprites.gif);
	background-repeat: no-repeat;
	padding-left: 48px;
	margin: 10px 0px 10px 10px;
}
.info .yourtasks {
	background-position: 0px 0px;
}
.info .ourstaff {
	background-position: -48px 0px;
}
.info .yourtime {
	background-position: -96px 0px;
}
.info p {
	background: white;
	padding-left: 10px;
}
.info strong {
	display: block;
}
.info {
	line-height: 1.3em;
}

/* quotebox */
.quotebox {
	position: relative;
	clear: both;
	height: 150px;
	/*border-top:3px solid #C5CFDD;*/
	/*margin:-20px;*/
	margin-left:-20px;
	margin-right:-20px;
	margin-bottom:-15px;
	padding-bottom:15px;
	background-color:#a1b0c6;
}
.quotebox .box {
	margin-right: 20px;
	float: left;
	position: absolute;
}
.quotebox p {
	padding-left: 40px;
	margin: 0;
	font-style:italic;
}
.quotebox .middle {
	background:white url(/static/images/startquote.png) no-repeat 0px 0px;
}
.quotebox .middle p {
	padding: 0;
	padding-left: 30px;
	background:url(/static/images/endquote.png) no-repeat bottom right;
}
.quotebox span.attribute {
  color:#455772;
  display:block;
  font-size:0.8em;
  padding-left: 40px;
}
.quotebox span.attribute a {
  color:#455772;
  text-decoration:none;
  border-bottom:1px dashed #657792;
}
.quotebox span.attribute a:hover {
  
}

/* positioning quotes */
.firstquote {
	width: 300px;
	top: 20px;
	left: 40px;
}
.secondquote {
	width: 320px;
	top: 60px;
	left: 400px;
}

/* static contentx box */
.staticbox {
	background: white;
	padding: 20px;
}

/* navigation bar */
.navbar {
	position: absolute;
	top: 0;
	left: 300px;
	text-align: right;
	width: 500px;
	color: #ccc;
	font-size: 1.1em;
	line-height: 85px;
}
.navbar a {
	color: #f0f0f0;
	text-decoration: none;
}

/* page footers */
.linkbar, .footer {
	margin: 0 20px;
	text-align: center;
}
.footer {
	font-size: small;
	background-color:#1c2430;
	color:#455772;
}
.footer a {
	color: #455772;
}

/* validation */
.validation-error {
	color: red;
	font-size: .8em;
}

/* tickets */
.ticket {
  background-color:white;
  padding:10px;
}
.ticket .date {
  font-size:1.5em;
  font-style:italic;
  color:#455772;
}
.ticket .label {
  font-weight:bold;
  width:9em;
  float:left;
}
.ticket .value {
  display:block;
  color:#455772;
  font-style:italic;
}
.ticket blockquote.value {
  float:none;
}
.ticket li {
  clear:both;
  list-style-type:none;
}

